# nlp-infer-bench

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: example-oidc.yaml
config/: experiments.yaml  models.yaml  models_legacy.yaml  s3_storage.yaml
configs/: experiment.yaml  model_registry.yaml
local/storage/: s3_manager.py
scripts/: convert_models.py  run_conversion.py
src/nlp_infer_bench/: config.py  conversion.py  s3_utils.py
